# projetos-de-estudo

./: README.md
BorutaPy motivation and use/: boruta.ipynb  requirements.txt
Causal Inference Exercises/: ACE_estimation_in_RDD_scenario.ipynb  RDD.ipynb  calibration_stuff.py  causal.ipynb  exercise3_RDD_CACE.ipynb  tratamento_continuo.ipynb
Creating OpenAI Gym for Pyxel Game/: README.md
Creating OpenAI Gym for Pyxel Game/AI_play/: AI_gameplay.py  gym_game.py  jogo.pyxres  meteoro.py  rockets.py
Creating OpenAI Gym for Pyxel Game/Human_play/: game.py  meteoro.py  rockets.py  utils.py
Credit Default without a target/: provenir_carlo.ipynb  pyproject.toml  utils.py
Machine Failure Predictions/: shape_carlo.html
New York City Taxi Fare Prediction/: 1_procurando_erros.ipynb  2_dinamica_temporal.ipynb  3_preprocessamento_modelagem.ipynb  apendice_gmaps.ipynb  apendice_zipcode_knn.ipynb
Tutoring guideline (portuguese)/: tutoria_ds.md
causal_inference_exercise2/: RDD.ipynb  causal.ipynb  pyproject.toml
