[tool.poetry]
name = "provenir-case"
version = "0.1.0"
description = ""
authors = ["vitaliset <carlo_lemos@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
scikit-learn = "1.3.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"
lightgbm = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
