[tool.poetry]
name = "causal-inference"
version = "0.1.0"
description = ""
authors = ["vitaliset <carlo_lemos@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "1.24.1"
pandas = "1.5.2"
matplotlib = "3.6.2"
scikit-learn = "1.2.2"
tqdm = "4.64.1"
jupyter = "^1.0.0"
daft = "^0.1.2"
pgmpy = "^0.1.22"
lightgbm = "^3.3.5"
category-encoders = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
